# fuzz

./: README.md  README.rst  pyproject.toml
fuzz/: cli.py
tests/: test_fuzz.py
