[tool.poetry]
name = "fuzz"
version = "0.1.0"
description = ""
authors = ["tnagorra <weathermist@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
colored = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
